<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="Welcome to My App"
                android:textColor="@color/pink"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layoutAnimation="@anim/layout_scale_up"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bc"
                    android:hint="@string/name"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bc"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bc"
                    android:hint="@string/phone_number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bc"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_pink"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Already have an account?"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_blue"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>